@@ -1,5 +1,13 @@
 2008-10-08  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totemPlugin.cpp:
+	* browser-plugin/totemPlugin.h: As the requestURI isn't an absolute
+	URI anymore, it might not have a scheme, in which case, check that
+	of the baseURI, fixes viewer being called with a playlist, instead
+	of a media URI when the src is relative (Closes: #555417)
+
+2008-10-08  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/totem-plugin-viewer.c (relative_uri_remove_query),
 	(resolve_uri): g_file_resolve_relative_path() doesn't handle queries
 	(or fragments, but we don't care about them), so work around that
